--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,8 @@
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-5.2.1-bin.zip
